# django-misaka

./: .gitignore  .pre-commit-config.yaml  .python-version  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  conftest.py  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: tox.yml
django_misaka/: __init__.py  apps.py  conf.py  tests.py
django_misaka/templatetags/: markdown.py
tests/: settings.py
tests/templates/tests/: test_syntax_highlighting.html  test_tag.html  test_tag_with_argument.html
tests/templates/tests/rendered_result/: syntax_highlighting.html  tag_with_argument.html
