[tool.poetry]
name = "django-misaka"
version = "0.2.1"
description = "A Django app for rendering Markdown (by Misaka Markdown parser)."
authors = ["Chieh Tu <me@chiehtu.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
misaka = "~2.1.1"
Pygments = "~2.13.0"

[tool.poetry.dev-dependencies]
coverage = "^6.4.2"
tox = "^3.25.1"
Django = [
    { version = "~3.2.14", python = "^3.7" },
    { version = "~4.0.6", python = "^3.8" },
]
pytest = "^7.2.1"
pytest-django = "^4.5.2"
flake8 = "^5.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
