[tool.poetry]
name = "django-misaka"
version = "0.2.2"
description = "A Django app for rendering Markdown (by Misaka Markdown parser)."
authors = ["Chieh Tu <me@chiehtu.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chiehtu/django-misaka"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = ">= 3.7, < 3.11"
misaka = "~2.1.1"
Pygments = "~2.15.1"

[tool.poetry.group.dev.dependencies]
coverage = "^6.4.2"
tox = "^3.25.1"
Django = [
    { version = "~3.2.14", python = "^3.7" },
    { version = "~4.0.6", python = "^3.8" },
]
pytest = "^7.1.2"
pytest-django = "^4.5.2"
flake8 = "^5.0.1"
ruff = "^0.0.267"
black = "^23.3.0"
isort = "^5.11.5"
pre-commit = "^2.21.0"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

ignore = [
    "E501",  # line too long, handled by black
]

[tool.isort]
profile = "black"
known_django = "django"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
